<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_3"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in1"
        android:textSize="35sp"
        android:layout_margin="25dp"
        android:textStyle="bold"
        android:gravity="center"
        tools:ignore="SpUsage" />
    <EditText
        android:id="@+id/et_user_phn_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number1"
        android:inputType="phone"
        android:drawablePadding="15dp"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"/>
    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password1"
        android:inputType="textPassword"
        android:padding="20dp"
        android:drawablePadding="15dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/bt_Login_Button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:textSize="18sp"
        android:backgroundTint="#3B52A7"
        android:layout_marginTop="3dp" />
    <Button
        android:id="@+id/bt_Register_Button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/register1"
        android:textSize="18sp"
        android:backgroundTint="#773883"
        android:layout_marginTop="2dp"/>
</LinearLayout>
