<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/img_1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_greetingImageView"
        android:layout_width="260dp"
        android:layout_height="245dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_2" />

    <TextView
        android:id="@+id/txt_greetingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/greeting_you_to_recipe_master"
        android:textColor="#090707"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_greetingTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/discover_easy_delicious_recipes_and_cook_like_a_pro"
        android:textColor="#121111"
        android:textSize="19.5sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/bt_startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center"
        android:text="@string/go_with_recipe_master"
        android:textSize="16sp"
        android:backgroundTint="#6E4EA6"
        android:layout_marginTop="16dp" />
</LinearLayout>
