<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="25dp"
    android:background="@drawable/img_4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_Give_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/give_a_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/et_Confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/et_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/bt_sign_up_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="18sp"
        android:backgroundTint="#21C6AA"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/bt_sign_in_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="login"
        android:textSize="18sp"
        android:backgroundTint="#21C6AA"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>